ref/ set non-referenced values

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-mail.host=${MAIL_HOST}
-mail.port=${MAIL_PORT}
+mail.host=smtp.gmail.com
+mail.port=587
 mail.username=${MAIL_USERNAME}
 mail.password=${MAIL_PASSWORD}
-mail.properties.mail.transport.protocol=${MAIL_PROP_TRANSPORT_PROTOCOL}
-mail.properties.mail.debug=${MAIL_PROP_DEBUG}
-mail.properties.mail.smtp.auth=${MAIL_PROP_AUTH}
-mail.properties.mail.smtp.starttls.enable=${MAIL_PROP_STARTTLS_ENABLE}
+mail.properties.mail.transport.protocol=smtp
+mail.properties.mail.debug=false
+mail.properties.mail.smtp.auth=true
+mail.properties.mail.smtp.starttls.enable=true
